profile-migrator: Fix migrate_sync_settings_path()

Account for the recent migration of sync timestamps from double to
gint64.

https://bugzilla.gnome.org/show_bug.cgi?id=791668